# figsmith

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
examples/: unified_plotter_demo.ipynb
figsmith/: __init__.py
figsmith/core/: __init__.py  interactive_plotter.py  property_manager.py
figsmith/io/: __init__.py  data_loader.py
figsmith/presets/: __init__.py
figsmith/utils/: __init__.py  helpers.py
figsmith/widgets/: __init__.py
