[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "figsmith"
version = "0.1.0"
description = "Interactive figure editor for scientific plotting, specialized for fluid dynamics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Aditya Sai Pranith Ayapilla", email = "pranith.aditya@gmail.com"}
]
maintainers = [
    {name = "Aditya Sai Pranith Ayapilla", email = "pranith.aditya@gmail.com"}
]
keywords = ["matplotlib", "visualization", "jupyter", "interactive", "plotting", "CFD", "fluid-dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "ipywidgets>=8.0.0",
    "IPython>=7.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "sphinx>=4.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]
io = [
    "h5py>=3.0.0",
    "vtk>=9.0.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/Pranithhazard/figsmith"
Documentation = "https://figsmith.readthedocs.io"
Repository = "https://github.com/Pranithhazard/figsmith"
"Bug Tracker" = "https://github.com/Pranithhazard/figsmith/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["figsmith*"]
exclude = ["figflow*", "figflow_panel*", "figflow_env*", "examples*", "tests*", "backups*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=figsmith --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["figsmith"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
